Fix feat description application, desc header styling
Feat description is now applied on mount (even though it should currently default to empty, and auto-loading will probably be done in another function), and some related variables (template refs) are named more clearly. Also, markdown info is no longer lost when discarding changes (apparently didn't catch that when it was implemented, before my break working on this).

Headers within the feat descriptions due to markdown are now adjusted as well, so they don't compete too much with the sheet's normal headers.

--- a/main.css
+++ b/main.css
@@ -1343,7 +1343,7 @@ input[type="text"],
     & input
     {
         width: 100%;
-        font-size: 1.5em;
+        font-size: 1.66em;
 
         &::placeholder
         {
@@ -1412,6 +1412,42 @@ input[type="text"],
 {
     cursor: text;
     background-color: var(--background-secondary);
+
+    & :is(h1, h2, h3, h4, h5, h6)
+    {
+        text-transform: none;
+        font-variant: small-caps;
+        color: color-mix(in oklab, var(--text-primary) 60%, var(--text-secondary));
+
+        margin-top: 0.3rem;
+        margin-bottom: 0.05em;
+    }
+    & h1
+    {
+        font-size: 1.66em;
+    }
+    & h2
+    {
+        font-size: 1.4em;
+    }
+    & h3
+    {
+        font-size: 1.33em;
+        color: color-mix(in oklab, var(--text-primary) 20%, var(--text-secondary));
+    }
+    & h4
+    {
+        font-size: 1.25em;
+    }
+    & h5
+    {
+        font-size: 1.2em;
+        color: color-mix(in oklab, var(--text-primary) 20%, var(--text-secondary));
+    }
+    & h6
+    {
+        font-size: 1.1em;
+    }
 }
 
 :is(.feat-buttons_data, .feat-buttons_count) button
